v0.23
	- Glowstone is now renewable: redstone has a chance of absorbing
	  concentrated sunlight when experiencing a change in potential,
	  converting it to glowstone.

	- Significant refactoring (mostly renaming) in code, to bring
	  naming convention more in line with java coding standard
	  (http://geosoft.no/development/javastyle.html).


v0.22
	- Added alternative method to create nether portals when
	  obsidian (or diamonds to collect it) is not available.
	  A portal frame can be built out of emerald, then tainted by
	  performing a dark ritual inside it.  The ritual requires the
	  reading of an arcane incantation, and the sacrifice of a holy
	  man inside the portal frame.

	- Fix long-standing bug that causes certain blocks (the modded
	  ones, e.g. soulsand, BTW aesthetic opaques) reappearing after
	  being mined.  It was caused by tools losing track of the
	  blocks against which they're effective.

	- Spontaneous animal spawning on tall grass in the desert, if it
	  is lit directly by natural sunlight, if there are no other
	  animals within a large radius around them.  This makes it
	  possible to play a desert-only superflat world.


v0.21
	- Automatic Update Check.  The server will automatically
	  check for new versions of Better With Renewables
	  periodically, and alert players upon joining if a
	  different version is available.

	- Change plant/animal/fungus cross-breeding requirements
	  to use the standard light level 7-8 pivot, so ender
	  spectacles can now be used to verify light level
	  requirements for cross-breeding, and cross-breeding
	  setups are less difficult to make.

	- Fix for "dud" villagers that refuse to trade.


v0.20
	- Significant villager trading nerfs.  Villagers now only
	  sell some finished tools and buy items for emeralds.
	  Emerald can now be treated as a distinct resource with its
	  own purpose, rather than an medium for shortcuts around
	  existing gameplay.
