@@ -103,6 +103,11 @@ Renewable Glowstone:
 	Redstone dust has a chance of absorbing concentrated sunlight
 	when experiencing a change in potential.
 
+Renewable Cobwebs:
+	Stew spider silk with something suitably sticky.  Don't try to
+	use too much silk at one time, or you'll end up with a matted
+	mess.
+
 Alternative Nether Portal Recipe:
 	A portal frame made of emerald can be tainted into a portal to
 	the underworld by a dark ritual, requiring the reading of an
