@@ -7,6 +7,10 @@ v0.23
 	  naming convention more in line with java coding standard
 	  (http://geosoft.no/development/javastyle.html).
 
+	- Cobwebs can now be made by brewing silk string with something
+	  suitably sticky.  Don't throw too much string in or you'll end
+	  up with a matted mess.
+
 
 v0.22
 	- Added alternative method to create nether portals when
